@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2008-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2008-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMekLab.
  *
@@ -44,7 +44,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import javax.swing.JFrame;
 import javax.swing.JOptionPane;
 
@@ -122,40 +121,43 @@ public class UnitUtil {
     }
 
     /**
-     * Tells us if the passed in {@link EquipmentType} is equipment that uses critical slots/mounted and is spread
-     * across multiple locations
+     * Returns true for MiscTypes that are fixed to a single location or to multiple locations; in other words, those
+     * Miscs for which there is no location choice when placing them on a unit. Returns false for anything that is not a
+     * MiscType and equipment that can be placed with some choice at least. When this method returns true, the misc in
+     * question should not go unallocated on a unit; also, if it cannot be present more than once it should not be
+     * offered in the equipment tab (where it can be added multiple times). Rather, its placement should be handled by
+     * some checkbox or other GUI item.
      * <p>
-     * This batch of checks should be moved to the {@link MiscType} class and simplified vs a massive list here. Can be
-     * a flag on the MiscType to denote "Fixed Location" and "Spread Equipment." MiscType#spreadable is already present
-     * on the MiscType so adding the field just like MiscType#omniFixedOnly.
+     * Dev note: Once this method has a very clear contract, suitable fields in MiscType could be used for it instead.
+     * Currently, this method is probably incomplete, unclear on what it's used for exactly and the exact use of the
+     * equipment field "spreadable" is also not clarified.
      *
-     * @param eq The equipment to test
+     * @param equipmentType The equipment to test
      *
-     * @return True if EquipmentType is of MiscType, is Fixed, and is spread across multiple locations.
+     * @return True if the equipment type is a MiscType and placed in one or more fixed locations
      */
-    public static boolean isFixedLocationSpreadEquipment(EquipmentType eq) {
-        return (eq instanceof MiscType) &&
-              (eq.hasFlag(MiscType.F_JUMP_BOOSTER) ||
-                    eq.hasFlag(MiscType.F_BA_MANIPULATOR) ||
-                    eq.hasFlag(MiscType.F_PARTIAL_WING) ||
-                    eq.hasFlag(MiscType.F_NULL_SIG) ||
-                    eq.hasFlag(MiscType.F_VOID_SIG) ||
-                    eq.hasFlag(MiscType.F_ENVIRONMENTAL_SEALING) ||
-                    eq.hasFlag(MiscType.F_TRACKS) ||
-                    eq.hasFlag(MiscType.F_TALON) ||
-                    (eq.hasFlag(MiscType.F_STEALTH) &&
-                          (eq.hasFlag(MiscType.F_MEK_EQUIPMENT) || eq.hasFlag(MiscType.F_TANK_EQUIPMENT))) ||
-                    eq.hasFlag(MiscType.F_CHAMELEON_SHIELD) ||
-                    eq.hasFlag(MiscType.F_BLUE_SHIELD) ||
-                    eq.hasFlag(MiscType.F_MAST_MOUNT) ||
-                    eq.hasFlag(MiscType.F_SCM) ||
-                    eq.hasFlag(MiscType.F_CHAIN_DRAPE) ||
-                    (eq.hasFlag(MiscType.F_RAM_PLATE) ||
-                          (eq.hasFlag(MiscType.F_JUMP_JET) && eq.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT)) ||
-                          (eq.hasFlag(MiscType.F_UMU) && eq.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT)) ||
-                          (eq.hasFlag(MiscType.F_MAGNETIC_CLAMP) &&
-                                eq.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT)) ||
-                          (eq.hasFlag(MiscType.F_MASC) && eq.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT))));
+    public static boolean isFixedLocationSpreadEquipment(EquipmentType equipmentType) {
+        return (equipmentType instanceof MiscType miscType) && (miscType.hasFlag(MiscType.F_JUMP_BOOSTER)
+              || miscType.hasFlag(MiscType.F_BA_MANIPULATOR)
+              || miscType.is(EquipmentTypeLookup.BA_MODULAR_EQUIPMENT_ADAPTOR)
+              || miscType.hasFlag(MiscType.F_PARTIAL_WING)
+              || miscType.hasFlag(MiscType.F_NULL_SIG)
+              || miscType.hasFlag(MiscType.F_VOID_SIG)
+              || miscType.hasFlag(MiscType.F_ENVIRONMENTAL_SEALING)
+              || miscType.hasFlag(MiscType.F_TRACKS)
+              || miscType.hasFlag(MiscType.F_TALON)
+              || (miscType.hasFlag(MiscType.F_STEALTH)
+              && (miscType.hasFlag(MiscType.F_MEK_EQUIPMENT) || miscType.hasFlag(MiscType.F_TANK_EQUIPMENT)))
+              || miscType.hasFlag(MiscType.F_CHAMELEON_SHIELD)
+              || miscType.hasFlag(MiscType.F_BLUE_SHIELD)
+              || miscType.hasFlag(MiscType.F_MAST_MOUNT)
+              || miscType.hasFlag(MiscType.F_SCM)
+              || miscType.hasFlag(MiscType.F_CHAIN_DRAPE)
+              || miscType.hasFlag(MiscType.F_RAM_PLATE)
+              || (miscType.hasFlag(MiscType.F_JUMP_JET) && miscType.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT))
+              || (miscType.hasFlag(MiscType.F_UMU) && miscType.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT))
+              || (miscType.hasFlag(MiscType.F_MAGNETIC_CLAMP) && miscType.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT))
+              || (miscType.hasFlag(MiscType.F_MASC) && miscType.hasFlag(MiscType.F_PROTOMEK_EQUIPMENT)));
     }
 
     /**
@@ -265,258 +267,64 @@ public class UnitUtil {
      * @param mount The equipment
      */
     public static void removeMounted(Entity unit, Mounted<?> mount) {
-        UnitUtil.removeCriticalSlots(unit, mount);
-
-        // Some special checks for BA
-        if (unit instanceof BattleArmor) {
-            // If we're removing a DWP, and it has an attached weapon, we need to detach the weapon
-            if (mount.getType().hasFlag(MiscType.F_DETACHABLE_WEAPON_PACK) && (mount.getLinked() != null)) {
-                Mounted<?> link = mount.getLinked();
-                link.setDWPMounted(false);
-                link.setLinked(null);
-                link.setLinkedBy(null);
-            }
-
-            // If we are removing a weapon that is mounted in an DWP, we need to clear the mounted status of the DWP
-            if ((mount.getLinkedBy() != null) &&
-                  mount.getLinkedBy().getType().hasFlag(MiscType.F_DETACHABLE_WEAPON_PACK)) {
-                Mounted<?> dwp = mount.getLinkedBy();
-                dwp.setLinked(null);
-                dwp.setLinkedBy(null);
-            }
-
-            // If we're removing an APM, and it has an attached weapon, we need to detach the weapon
-            if (mount.getType().hasFlag(MiscType.F_AP_MOUNT) && (mount.getLinked() != null)) {
-                Mounted<?> link = mount.getLinked();
-                link.setAPMMounted(false);
-                link.setLinked(null);
-                link.setLinkedBy(null);
-            }
-
-            // If we're removing a weapon that is mounted in an APM, we need to clear the mounted status of the AP
-            // Mount.
-            if ((mount.getLinkedBy() != null) && mount.getLinkedBy().getType().hasFlag(MiscType.F_AP_MOUNT)) {
-                Mounted<?> apm = mount.getLinkedBy();
-                apm.setLinked(null);
-                apm.setLinkedBy(null);
-            }
-        }
-
-        // We will need to reset the equipment numbers of the bay ammo and weapons
-        Map<WeaponMounted, List<WeaponMounted>> bayWeapons = new HashMap<>();
-        Map<WeaponMounted, List<AmmoMounted>> bayAmmo = new HashMap<>();
-        for (WeaponMounted bay : unit.getWeaponBayList()) {
-            bayWeapons.put(bay, bay.getBayWeapons());
-            bayAmmo.put(bay, bay.getBayAmmo());
-        }
-
-        // Some special checks for Aeros
-        if (unit instanceof Aero) {
-            if (mount instanceof WeaponMounted) {
-                // Aeros have additional weapon lists that need to be cleared
-                unit.getTotalWeaponList().remove(mount);
-                unit.getWeaponBayList().remove(mount);
-                unit.getWeaponGroupList().remove(mount);
-            }
-        }
-
-        unit.getEquipment().remove(mount);
-
-        if (mount instanceof MiscMounted) {
-            unit.getMisc().remove(mount);
-        } else if (mount instanceof AmmoMounted) {
-            unit.getAmmo().remove(mount);
-        } else if (mount instanceof WeaponMounted) {
-            unit.getWeaponList().remove(mount);
-            unit.getTotalWeaponList().remove(mount);
-        }
-
-        if (mount instanceof WeaponMounted && bayWeapons.containsKey(mount)) {
-            bayWeapons.get(mount).forEach(w -> {
-                removeCriticalSlots(unit, w);
-                changeMountStatus(unit, w, Entity.LOC_NONE, Entity.LOC_NONE, false);
-            });
-            bayAmmo.get(mount).forEach(a -> {
-                removeCriticalSlots(unit, a);
-                Mounted<?> moveTo = UnitUtil.findUnallocatedAmmo(unit, a.getType());
-
-                if (null != moveTo) {
-                    moveTo.setShotsLeft(moveTo.getBaseShotsLeft() + a.getBaseShotsLeft());
-                    UnitUtil.removeMounted(unit, a);
-                }
-
-                changeMountStatus(unit, a, Entity.LOC_NONE, Entity.LOC_NONE, false);
-            });
-            bayWeapons.remove(mount);
-            bayAmmo.remove(mount);
-        }
-
-        for (WeaponMounted bay : bayWeapons.keySet()) {
-            bay.clearBayWeapons();
-            for (WeaponMounted w : bayWeapons.get(bay)) {
-                if (mount != w) {
-                    bay.addWeaponToBay(w);
-                }
-            }
-        }
-
-        for (WeaponMounted bay : bayAmmo.keySet()) {
-            bay.clearBayAmmo();
-            for (AmmoMounted a : bayAmmo.get(bay)) {
-                if (mount != a) {
-                    bay.addAmmoToBay(a);
-                }
-            }
-        }
-
-        // Remove ammo added for a one-shot launcher
-        if ((mount.getType() instanceof WeaponType) && mount.isOneShot()) {
-            List<AmmoMounted> osAmmo = new ArrayList<>();
-            for (AmmoMounted ammo = (AmmoMounted) mount.getLinked();
-                  ammo != null;
-                  ammo = (AmmoMounted) ammo.getLinked()) {
-                osAmmo.add(ammo);
-            }
-            osAmmo.forEach(m -> {
-                unit.getEquipment().remove(m);
-                unit.getAmmo().remove(m);
-            });
-        }
-
-        // It's possible that the equipment we are removing was linked to something else, and so the linkedBy state may
-        // be set. We should remove it. Using getLinked could be unreliable, so we'll brute force it. An example of this
-        // would be removing a linked Artemis IV FCS
-        for (Mounted<?> m : unit.getEquipment()) {
-            if (mount.equals(m.getLinkedBy())) {
-                m.setLinkedBy(null);
-            }
-        }
-
-        if ((mount.getType() instanceof MiscType) &&
-              (mount.getType().hasFlag(MiscType.F_HEAD_TURRET) ||
-                    mount.getType().hasFlag(MiscType.F_SHOULDER_TURRET) ||
-                    mount.getType().hasFlag(MiscType.F_QUAD_TURRET))) {
-            for (Mounted<?> m : unit.getEquipment()) {
-                if (m.getLocation() == mount.getLocation()) {
-                    m.setMekTurretMounted(false);
-                }
-            }
-        }
-
-        if ((mount.getType() instanceof MiscType) && mount.getType().hasFlag(MiscType.F_SPONSON_TURRET)) {
-            for (Mounted<?> m : unit.getEquipment()) {
-                m.setSponsonTurretMounted(false);
-            }
-        }
-
-        if ((mount.getType() instanceof MiscType) && mount.getType().hasFlag(MiscType.F_PINTLE_TURRET)) {
-            for (Mounted<?> m : unit.getEquipment()) {
-                if (m.getLocation() == mount.getLocation()) {
-                    m.setPintleTurretMounted(false);
-                }
-            }
-        }
-        unit.recalculateTechAdvancement();
+        ConstructionUtil.removeMounted(unit, mount);
     }
 
     /**
-     * Removes all criticalSlots of the given unit.
+     * Removes all critical slots of the given unit, unallocating most equipment (i.e., placing it into
+     * {@code Entity.LOC_NONE}. Generally, equipment that does not make sense when unallocated is either deleted or left
+     * in its location. Depending on unit type, ammo is left in place when its placement is not free (fighters).
+     * Unallocated Clan CASE is removed (but all other forms of CASE/CASE II/CASE-P are not). Weapon bays are deleted.
      */
-    synchronized public static void removeAllCriticalSlots(Entity unit) {
-        removeAllCriticalSlotsFrom(unit, IntStream.range(0, unit.locations()).boxed().toList());
+    public static void removeAllCriticalSlots(Entity unit) {
+        if (unit instanceof AeroSpaceFighter fighter) {
+            AeroUtil.removeAllCriticalSlotsFromFighter(fighter);
+        } else if (unit instanceof BattleArmor battleArmor) {
+            BattleArmorUtil.removeAllCriticalSlotsFrom(battleArmor);
+        } else {
+            // weapon bays can never be outside of their location, so delete them
+            List<Mounted<?>> weaponBays =
+                  unit.getEquipment().stream()
+                        .filter(m -> m.getType() instanceof BayWeapon)
+                        .toList();
+            // removeMounted modifies the equipment list, therefore need to create a separate weaponBay list!
+            weaponBays.forEach(mounted -> removeMounted(unit, mounted));
 
-        // cleanup of remnants if any (should not be needed, but we never know)
-        unit.getEquipment()
-              .stream()
-              .filter(m -> (m != null) &&
-                    (m.getLocation() != Entity.LOC_NONE) &&
-                    (!UnitUtil.isFixedLocationSpreadEquipment(m.getType())))
-              .forEach(m -> {
-                  UnitUtil.removeCriticalSlots(unit, m);
-                  UnitUtil.changeMountStatus(unit, m, Entity.LOC_NONE, Entity.LOC_NONE, false);
-              });
-    }
-
-    /**
-     * Removes all criticalSlots from the given locations for the given unit.
-     */
-    synchronized public static void removeAllCriticalSlotsFrom(Entity unit, List<Integer> locations) {
-        // Special handling for BattleArmor
-        if (unit instanceof BattleArmor ba) {
-            ba.getEquipment()
-                  .stream()
-                  .filter(m -> (m != null) && (m.getBaMountLoc() != BattleArmor.MOUNT_LOC_NONE))
-                  .filter(m -> locations.contains(m.getBaMountLoc()))
-                  .forEach(m -> {
-                      m.setBaMountLoc(BattleArmor.MOUNT_LOC_NONE);
-                      UnitUtil.changeMountStatus(unit, m, BattleArmor.LOC_SQUAD, BattleArmor.LOC_SQUAD, false);
-                  });
-            return;
-        }
-        // first we remove all criticalSlots
-        for (int loc = 0; loc < unit.locations(); loc++) {
-            if (!locations.contains(loc)) {
-                continue;
-            }
-            for (int i = 0; i < unit.getNumberOfCriticalSlots(loc); i++) {
-                CriticalSlot cs = unit.getCritical(loc, i);
-                if ((cs != null) && (cs.getType() == CriticalSlot.TYPE_EQUIPMENT)) {
-                    Mounted<?> m1 = cs.getMount();
-                    Mounted<?> m2 = cs.getMount2();
-                    if ((m2 != null) && (!UnitUtil.isFixedLocationSpreadEquipment(m2.getType()))) {
-                        UnitUtil.removeCriticalSlots(unit, m2);
-                        UnitUtil.changeMountStatus(unit, m2, Entity.LOC_NONE, Entity.LOC_NONE, false);
-                    }
-                    if ((m1 != null) && (!UnitUtil.isFixedLocationSpreadEquipment(m1.getType()))) {
-                        UnitUtil.removeCriticalSlots(unit, m1);
-                        UnitUtil.changeMountStatus(unit, m1, Entity.LOC_NONE, Entity.LOC_NONE, false);
-                    }
-                }
-            }
-        }
-        // cleanup of remnants if any (should not be needed, but we never know)
-        unit.getEquipment()
-              .stream()
-              .filter(m -> (m != null) && locations.contains(m.getLocation()))
-              .filter(m -> (m.getLocation() != Entity.LOC_NONE) &&
-                    (!UnitUtil.isFixedLocationSpreadEquipment(m.getType())))
-              .forEach(m -> {
-                  UnitUtil.removeCriticalSlots(unit, m);
-                  UnitUtil.changeMountStatus(unit, m, Entity.LOC_NONE, Entity.LOC_NONE, false);
-              });
-    }
-
-    /**
-     * Sets the corresponding critical slots to null for the Mounted object.
-     *
-     * @param unit The entity
-     * @param eq   The equipment to test
-     */
-    public static void removeCriticalSlots(Entity unit, Mounted<?> eq) {
-        if (eq.getLocation() == Entity.LOC_NONE) {
-            return;
-        }
-
-        for (int loc = 0; loc < unit.locations(); loc++) {
-            for (int slot = 0; slot < unit.getNumberOfCriticalSlots(loc); slot++) {
-                CriticalSlot criticalSlot = unit.getCritical(loc, slot);
-                if ((criticalSlot != null) && (criticalSlot.getType() == CriticalSlot.TYPE_EQUIPMENT)) {
-                    if ((criticalSlot.getMount() != null) && (criticalSlot.getMount().equals(eq))) {
-                        // If there are two pieces of equipment in this slot, remove first one, and replace it with
-                        // the second
-                        if (criticalSlot.getMount2() != null) {
-                            criticalSlot.setMount(criticalSlot.getMount2());
-                            criticalSlot.setMount2(null);
-                        } else {
-                            // If it's the only Mounted, clear the slot
-                            unit.setCritical(loc, slot, null);
+            // now, remove all non-special crit slots
+            for (int loc = 0; loc < unit.locations(); loc++) {
+                for (int i = 0; i < unit.getNumberOfCriticalSlots(loc); i++) {
+                    CriticalSlot cs = unit.getCritical(loc, i);
+                    if ((cs != null) && (cs.getType() == CriticalSlot.TYPE_EQUIPMENT)) {
+                        Mounted<?> m1 = cs.getMount();
+                        Mounted<?> m2 = cs.getMount2();
+                        if ((m2 != null) && (!UnitUtil.isFixedLocationSpreadEquipment(m2.getType()))) {
+                            UnitUtil.removeCriticalSlots(unit, m2);
+                            UnitUtil.changeMountStatus(unit, m2, Entity.LOC_NONE, Entity.LOC_NONE, false);
                         }
-                    } else if ((criticalSlot.getMount2() != null) && (criticalSlot.getMount2().equals(eq))) {
-                        criticalSlot.setMount2(null);
+                        if ((m1 != null) && (!UnitUtil.isFixedLocationSpreadEquipment(m1.getType()))) {
+                            UnitUtil.removeCriticalSlots(unit, m1);
+                            UnitUtil.changeMountStatus(unit, m1, Entity.LOC_NONE, Entity.LOC_NONE, false);
+                        }
                     }
                 }
             }
         }
+
+        // Clan CASE is automatic and should not end up unallocated
+        removeAllMounted(unit, EquipmentType.get(EquipmentTypeLookup.CLAN_CASE));
+    }
+
+    /**
+     * Sets the corresponding critical slots to null for the Mounted object. All crit slots of the unit are checked for
+     * any presence of that Mounted (object equality!) and emptied where found. When mounted is null, this method does
+     * nothing. Note that the crit slots are checked even if the mounted equipment is unallocated (in Entity.LOC_NONE)
+     * or not part of the unit at all.
+     *
+     * @param unit    The entity
+     * @param mounted The equipment to test
+     */
+    public static void removeCriticalSlots(Entity unit, @Nullable Mounted<?> mounted) {
+        ConstructionUtil.removeCriticalSlots(unit, mounted);
     }
 
     /**
@@ -551,13 +359,26 @@ public class UnitUtil {
         }
     }
 
+    /**
+     * Adds the given Mounted equipment to the given unit in the given location, applying rearMounted, by forwarding to
+     * Entity.addEquipment() -- see that method for details. Also sets the equipment to pod-mounted on Omni units if
+     * possible, and updates Clan CASE placement on Meks. This method is an MML wrapper for Entity.addEquipment().
+     *
+     * @param unit        The Entity
+     * @param mounted     The equipment to add
+     * @param loc         The location for the equipment
+     * @param rearMounted When true, set the equipment to rear-facing if possible
+     *
+     * @throws LocationFullException When the location is full
+     * @see Entity#addEquipment(Mounted, int, boolean)
+     */
     public static void addMounted(Entity unit, Mounted<?> mounted, int loc, boolean rearMounted)
           throws LocationFullException {
         unit.addEquipment(mounted, loc, rearMounted);
         mounted.setOmniPodMounted(canPodMount(unit, mounted));
 
-        if (unit instanceof Mek mekUnit) {
-            MekUtil.updateClanCasePlacement(mekUnit);
+        if (unit instanceof Mek mek) {
+            MekUtil.updateClanCasePlacement(mek);
         }
     }
 
@@ -592,8 +413,17 @@ public class UnitUtil {
      * @return Boolean if the tech level is legal for the passed unit
      */
     public static boolean isLegal(Entity unit, ITechnology tech) {
+        for (int techLevelYear : unit.getTechLevelYears()) {
+            if (isLegal(unit, tech, techLevelYear)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean isLegal(Entity unit, ITechnology tech, int techLevelYear) {
         if (unit.isMixedTech()) {
-            if (!tech.isAvailableIn(unit.getTechLevelYear(), CConfig.getBooleanParam(CConfig.TECH_EXTINCT))) {
+            if (!tech.isAvailableIn(techLevelYear, CConfig.getBooleanParam(CConfig.TECH_EXTINCT))) {
                 return false;
             }
         } else {
@@ -601,13 +431,13 @@ public class UnitUtil {
                 return false;
             }
 
-            if (!tech.isAvailableIn(unit.getTechLevelYear(),
+            if (!tech.isAvailableIn(techLevelYear,
                   unit.isClan(),
                   CConfig.getBooleanParam(CConfig.TECH_EXTINCT))) {
                 return false;
             }
         }
-        return TechConstants.convertFromNormalToSimple(tech.getTechLevel(unit.getTechLevelYear(), unit.isClan())) <=
+        return TechConstants.convertFromNormalToSimple(tech.getTechLevel(techLevelYear, unit.isClan())) <=
               TechConstants.convertFromNormalToSimple(unit.getTechLevel());
     }
 
@@ -727,9 +557,14 @@ public class UnitUtil {
     }
 
     /**
-     * Changes the location for a Mounted instance. Note: for BattleArmor, this effects which suit the equipment is
-     * placed on (as that is what Mounted. Location means for BA), but not where on the suit it's located (ie,
-     * BAMountLocation isn't affected). BattleArmor should change this outside of this method.
+     * Updates the location for a Mounted equipment. If the equipment was previously in another location, links to other
+     * equipment are removed. If it is placed in a location on the unit (i.e., not Entity.LOC_NONE), new links are
+     * possibly created using MekFileParser.postLoadInit(). On Meks, Clan CASE placement is updated. This method does
+     * *NOT* change nor create Critical Slots.
+     * <p>
+     * Note: for BattleArmor, this affects which suit the equipment is placed on (as that is what Mounted. Location
+     * means for BA), but not where on the suit it's located (ie, BAMountLocation isn't affected). BattleArmor should
+     * change this outside of this method.
      *
      * @param unit              The entity The unit being modified
      * @param eq                The equipment to test The equipment mount to move
@@ -740,31 +575,7 @@ public class UnitUtil {
      */
     public static void changeMountStatus(Entity unit, Mounted<?> eq, int location, int secondaryLocation,
           boolean rear) {
-        if ((location != eq.getLocation() && !eq.isOneShot())) {
-            if (eq.getLinked() != null) {
-                eq.getLinked().setLinkedBy(null);
-                eq.setLinked(null);
-            }
-            if (eq.getLinkedBy() != null) {
-                eq.getLinkedBy().setLinked(null);
-                eq.setLinkedBy(null);
-            }
-        }
-        eq.setLocation(location, rear);
-        eq.setSecondLocation(secondaryLocation, rear);
-        eq.setSplit(secondaryLocation > -1);
-        // If we're adding it to a location on the unit, check equipment linkages
-        if (location > Entity.LOC_NONE) {
-            try {
-                MekFileParser.postLoadInit(unit);
-            } catch (Exception ignored) {
-                // Exception thrown for not having equipment to link to yet, which is acceptable
-                // here
-            }
-        }
-        if (unit instanceof Mek) {
-            MekUtil.updateClanCasePlacement((Mek) unit);
-        }
+        ConstructionUtil.changeMountStatus(unit, eq, location, secondaryLocation, rear);
     }
 
     public static void resizeMount(Mounted<?> mount, double newSize) {
@@ -806,8 +617,8 @@ public class UnitUtil {
                     if (cs != null) {
                         toAdd.add(cs);
                     }
-                    entity.setCritical(loc, slot, toAdd.get(0));
-                    toAdd.remove(0);
+                    entity.setCritical(loc, slot, toAdd.getFirst());
+                    toAdd.removeFirst();
                     slot++;
                 }
             }
@@ -824,14 +635,7 @@ public class UnitUtil {
      * @return An unallocated non-one-shot ammo mount of the same type, or null if there is not one.
      */
     public static Mounted<?> findUnallocatedAmmo(Entity unit, EquipmentType at) {
-        for (Mounted<?> m : unit.getAmmo()) {
-            if ((m.getLocation() == Entity.LOC_NONE) &&
-                  at.equals(m.getType()) &&
-                  ((m.getLinkedBy() == null) || !m.getLinkedBy().getType().hasFlag(WeaponType.F_ONE_SHOT))) {
-                return m;
-            }
-        }
-        return null;
+        return ConstructionUtil.findUnallocatedAmmo(unit, at);
     }
 
     /**
@@ -1103,6 +907,13 @@ public class UnitUtil {
         return null;
     }
 
+    /**
+     * Removes empty crit slots between equipment from the given location on the given unit, if there are any. Does
+     * nothing for an invalid location, including Entity.LOC_NONE.
+     *
+     * @param unit The Entity
+     * @param loc  The location to compact
+     */
     public static void compactCriticalSlots(Entity unit, int loc) {
         int firstEmpty = -1;
         for (int slot = 0; slot < unit.getNumberOfCriticalSlots(loc); slot++) {
@@ -1148,16 +959,6 @@ public class UnitUtil {
 
     public static void loadFonts() {
         Font font = Font.decode(CConfig.getParam(CConfig.RS_FONT, "Eurostile"));
-
-        // If the font is not installed, use system default sans
-        if (null == font) {
-            font = Font.decode(Font.SANS_SERIF);
-        }
-
-        // If that still doesn't work, get the default dialog font
-        if (null == font) {
-            font = Font.decode(null);
-        }
         rsFont = font.deriveFont(Font.PLAIN, 8);
         rsBoldFont = font.deriveFont(Font.BOLD, 8);
     }
@@ -1222,8 +1023,7 @@ public class UnitUtil {
      */
     public static String getCritName(Entity unit, EquipmentType eq) {
         String name = eq.getName();
-        // Only shorten non-ammo; getShortName leaves off "Ammo" and "[Half]" that we
-        // want
+        // Only shorten non-ammo; getShortName leaves off "Ammo" and "[Half]" that we want
         if (name.length() > 22 && !(eq instanceof AmmoType)) {
             name = eq.getShortName();
         }
@@ -1728,7 +1528,7 @@ public class UnitUtil {
         } else if (unit.hasETypeFlag(Entity.ETYPE_BATTLEARMOR)) {
             testEntity = new TestBattleArmor((BattleArmor) unit, entityVerifier.baOption, null);
         } else if (unit.hasETypeFlag(Entity.ETYPE_INFANTRY)) {
-            testEntity = new TestInfantry((Infantry) unit, entityVerifier.infOption, null);
+            testEntity = new TestInfantry((ConvInfantry) unit, entityVerifier.infOption, null);
         } else if (unit.hasETypeFlag(Entity.ETYPE_HANDHELD_WEAPON)) {
             testEntity = new TestHandheldWeapon((HandheldWeapon) unit, entityVerifier.infOption, null);
         }
@@ -1736,8 +1536,8 @@ public class UnitUtil {
     }
 
     /**
-     * Check that the unit is valid. When the "Use Game Year" setting is enabled, equipment intro
-     * dates are validated against the configured game year rather than the unit's intro year.
+     * Check that the unit is valid. When the "Use Game Year" setting is enabled, equipment intro dates are validated
+     * against the configured game year rather than the unit's intro year.
      *
      * @param unit The entity
      */
@@ -1780,18 +1580,19 @@ public class UnitUtil {
     }
 
     /**
-     * Checks whether the equipment can be added to the location on the build tab
+     * Returns true when the given equipment can be placed in the given location on the given unit. This does not test
+     * if it can be added again given other present equipment (i.e., if there are restrictions on the equipment count),
+     * only if the location is suitable for the equipment type at all.
      *
      * @param unit     The entity being designed
-     * @param eq       The equipment to test The equipment
-     * @param location The location to add it
+     * @param eq       The equipment to test
+     * @param location The location
      *
-     * @return Whether the location is valid
+     * @return True when an equipment of the given type can be placed in the given location
      */
     public static boolean isValidLocation(Entity unit, EquipmentType eq, int location) {
         if (unit instanceof BattleArmor) {
-            // Can only be mounted in APM or armored glove; can't be added directly to
-            // location
+            // Can only be mounted in APM or armored glove; can't be added directly to location
             return !(eq instanceof WeaponType && eq.hasFlag(WeaponType.F_INFANTRY));
         }
         return TestEntity.isValidLocation(unit, eq, location, null);
@@ -2051,7 +1852,7 @@ public class UnitUtil {
             UnitUtil.removeMounted(unit, m);
         }
 
-        if (unit instanceof Infantry pbi) {
+        if (unit instanceof ConvInfantry pbi) {
             if ((null != pbi.getPrimaryWeapon()) && !techManager.isLegal(pbi.getPrimaryWeapon())) {
                 dirty = true;
                 InfantryUtil.replaceMainWeapon(pbi, (InfantryWeapon) EquipmentType.get("Infantry Auto Rifle"), false);
